--- a/style.css
+++ b/style.css
@@ -26,11 +26,11 @@ div {
 	cursor: pointer;
 }
 .button1 {
-	background-color: white;
+	background-color: green;
 	color: black;
 	border: 2px solid #4CAF50
 }
 .button1:hover {
-	background-color: #4CAF50;
-	color: green;
+	background-color: white;
+	color: white;
 }
