--- a/style.css
+++ b/style.css
@@ -31,6 +31,6 @@ div {
 	border: 2px solid #4CAF50
 }
 .button1:hover {
-	background-color: white;
-	color: white;
+	background-color: solid #4CAF50;
+	color: black;
 }
